--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "react": "16.8.1",
+    "react-dom": "16.8.1",
+    "react-scripts": "2.1.5",
+    "styled-components": "^4.1.3",
+    "typescript": "3.3.3"
+  },
+  "devDependencies": {
     "@types/jest": "24.0.4",
     "@types/node": "11.9.4",
     "@types/react": "16.8.3",
     "@types/react-dom": "16.8.1",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
-    "react-scripts": "2.1.5",
-    "typescript": "3.3.3"
+    "@types/styled-components": "4.1.10"
   },
   "scripts": {
     "start": "react-scripts start",
